# rust_lambda_diesel

./: .gitignore  Cargo.toml  README.md
cdk/lib/: cdk-stack.ts
migrations/2024-04-26-233407_create_users/: up.sql
migrations/2024-04-27-005335_add_lang_col/: down.sql  up.sql
migrations/2024-04-27-010750_add_event_table/: up.sql
src/: db_service.rs  handler.rs  main.rs  schema.rs
src/model/: events.rs  users.rs
