[package]
name = "rust_lambda_restapi"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
lambda_http = "0.11.1"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1", features = ["macros"] }
bb8 = "0.8.0"
diesel = "2.0.3"
diesel-async = { version = "0.2.1", features = ["postgres", "bb8"] }
uuid = {version = "1.8.0", features = ["v4", "serde"]}

